trying to avoid gaps

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -12,25 +12,31 @@ h1, h2, h3, h4
     color: $beta
     -webkit-font-smoothing: antialiased
     text-rendering: optimizeLegibility
-    margin-top: -1px
-    margin-bottom: 0.5rem // Reduced margin-bottom
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
 
 h1
     font-size: 1.25rem
     letter-spacing: -1px
     color: $beta
     font-weight: 600
-    margin-bottom: 0.5rem // Reduced margin-bottom
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
 
 h2
     font-size: 1rem
-    margin-bottom: 0.5rem // Reduced margin-bottom
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
 
 h3
     font-size: .6rem
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
 
 h4
     font-size: .4rem
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
 
 a
     color: $delta
@@ -41,7 +47,8 @@ p
     color: $alpha
     font-weight: 400 
     font-family: $fontSans
-    margin-bottom: 0.5rem // Reduced margin-bottom
+    margin-top: 0.5rem // Adjusted margin-top
+    margin-bottom: 0.5rem // Adjusted margin-bottom
     letter-spacing: 0.4px
 
     @media #{$mobile}
